Fix publication link not wrap

--- a/_sass/_citation.scss
+++ b/_sass/_citation.scss
@@ -200,6 +200,8 @@ sup {
 }
 
 ol.bibliography {
+  word-break: break-word;
+
   .details {
     margin-left: 1rem;
 
